example/remote/__snapshots__/nginx-gateway-fabric.values.snap.yaml
# chartsnap: snapshot_version=v3
---
apiVersion: helm-chartsnap.jlandowner.dev/v1alpha1
kind: Unknown
raw: |
  Pulled: ghcr.io/nginxinc/charts/nginx-gateway-fabric:1.3.0
  Digest: sha256:6b193e388ba2c4374eb6e70e4a94f9815dc4cea032eeee5edd03f75af50de5e9
---
# Source: nginx-gateway-fabric/templates/rbac.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: chartsnap-nginx-gateway-fabric
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: chartsnap
    app.kubernetes.io/version: "1.3.0"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: nginx-gateway-fabric-1.3.0
---
# Source: nginx-gateway-fabric/templates/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: chartsnap-nginx-gateway-fabric
  labels:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: chartsnap
    app.kubernetes.io/version: "1.3.0"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: nginx-gateway-fabric-1.3.0
rules:
- apiGroups:
  - ""
  resources:
  - namespaces
  - services
  - secrets
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - ""
  resources:
  - pods
  verbs:
  - get
- apiGroups:
  - apps
  resources:
  - replicasets
  verbs:
  - get
- apiGroups:
  - ""
  resources:
  - nodes
  verbs:
  - list
- apiGroups:
  - ""
  resources:
  - events
  verbs:
  - create
  - patch
- apiGroups:
  - discovery.k8s.io
  resources:
  - endpointslices
  verbs:
  - list
  - watch
- apiGroups:
  - gateway.networking.k8s.io
  resources:
  - gatewayclasses
  - gateways
  - httproutes
  - referencegrants
  - grpcroutes
  verbs:
  - list
  - watch
- apiGroups:
  - gateway.networking.k8s.io
  resources:
  - httproutes/status
  - gateways/status
  - gatewayclasses/status
  - grpcroutes/status
  verbs:
  - update
- apiGroups:
  - gateway.nginx.org
  resources:
  - nginxgateways
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - gateway.nginx.org
  resources:
  - nginxproxies
  - clientsettingspolicies
  - observabilitypolicies
  verbs:
  - list
  - watch
- apiGroups:
  - gateway.nginx.org
  resources:
  - nginxgateways/status
  - clientsettingspolicies/status
  - observabilitypolicies/status
  verbs:
  - update
- apiGroups:
  - coordination.k8s.io
  resources:
  - leases
  verbs:
  - create
  - get
  - update
- apiGroups:
  - apiextensions.k8s.io
  resources:
  - customresourcedefinitions
  verbs:
  - list
  - watch
---
# Source: nginx-gateway-fabric/templates/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: chartsnap-nginx-gateway-fabric
  labels:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: chartsnap
    app.kubernetes.io/version: "1.3.0"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: nginx-gateway-fabric-1.3.0
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: chartsnap-nginx-gateway-fabric
subjects:
- kind: ServiceAccount
  name: chartsnap-nginx-gateway-fabric
  namespace: nginx-gateway
---
# Source: nginx-gateway-fabric/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chartsnap-nginx-gateway-fabric
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: chartsnap
    app.kubernetes.io/version: "1.3.0"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: nginx-gateway-fabric-1.3.0
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: internal
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: chartsnap
  ports: # Update the following ports to match your Gateway Listener ports
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
---
# Source: nginx-gateway-fabric/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chartsnap-nginx-gateway-fabric
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: chartsnap
    app.kubernetes.io/version: "1.3.0"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: nginx-gateway-fabric-1.3.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-gateway-fabric
      app.kubernetes.io/instance: chartsnap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-gateway-fabric
        app.kubernetes.io/instance: chartsnap
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      containers:
      - args:
        - static-mode
        - --gateway-ctlr-name=gateway.nginx.org/nginx-gateway-controller
        - --gatewayclass=nginx
        - --config=chartsnap-config
        - --service=chartsnap-nginx-gateway-fabric
        - --metrics-port=9113
        - --health-port=8081
        - --leader-election-lock-name=chartsnap-nginx-gateway-fabric-leader-election
        env:
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: ghcr.io/nginxinc/nginx-gateway-fabric:1.3.0
        imagePullPolicy: IfNotPresent
        name: nginx-gateway
        ports:
        - name: metrics
          containerPort: 9113
        - name: health
          containerPort: 8081
        readinessProbe:
          httpGet:
            path: /readyz
            port: health
          initialDelaySeconds: 3
          periodSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - KILL
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsUser: 102
          runAsGroup: 1001
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d
        - name: module-includes
          mountPath: /etc/nginx/module-includes
        - name: nginx-secrets
          mountPath: /etc/nginx/secrets
        - name: nginx-run
          mountPath: /var/run/nginx
        - name: nginx-includes
          mountPath: /etc/nginx/includes
      - image: ghcr.io/nginxinc/nginx-gateway-fabric/nginx:1.3.0
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsUser: 101
          runAsGroup: 1001
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d
        - name: module-includes
          mountPath: /etc/nginx/module-includes
        - name: nginx-secrets
          mountPath: /etc/nginx/secrets
        - name: nginx-run
          mountPath: /var/run/nginx
        - name: nginx-cache
          mountPath: /var/cache/nginx
        - name: nginx-lib
          mountPath: /var/lib/nginx
        - name: nginx-includes
          mountPath: /etc/nginx/includes
      terminationGracePeriodSeconds: 30
      serviceAccountName: chartsnap-nginx-gateway-fabric
      shareProcessNamespace: true
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
      volumes:
      - name: nginx-conf
        emptyDir: {}
      - name: module-includes
        emptyDir: {}
      - name: nginx-secrets
        emptyDir: {}
      - name: nginx-run
        emptyDir: {}
      - name: nginx-cache
        emptyDir: {}
      - name: nginx-lib
        emptyDir: {}
      - name: nginx-includes
        emptyDir: {}
---
# Source: nginx-gateway-fabric/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: chartsnap
    app.kubernetes.io/version: "1.3.0"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: nginx-gateway-fabric-1.3.0
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
---
# Source: nginx-gateway-fabric/templates/nginxgateway.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: NginxGateway
metadata:
  name: chartsnap-config
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: chartsnap
    app.kubernetes.io/version: "1.3.0"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: nginx-gateway-fabric-1.3.0
spec:
  logging:
    level: info
